[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Global/Transitions/TransitionManager.gd" type="Script" id=1]

[node name="TransitionManager" type="Node"]
script = ExtResource( 1 )

[node name="Tweens" type="Node" parent="."]

[node name="StandardFadeTween" type="Tween" parent="Tweens"]

[node name="FadeLayer" type="CanvasLayer" parent="."]
layer = 9

[node name="StandardFadeRect" type="ColorRect" parent="FadeLayer"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tween_completed" from="Tweens/StandardFadeTween" to="." method="_on_StandardFadeTween_tween_completed"]
